tests/ui/consts/const-eval/stable-metric/ctfe-labelled-loop.stderr
error: constant evaluation is taking a long time
  --> $DIR/ctfe-labelled-loop.rs:6:5
   |
LL | /     'mylabel: loop {
LL | |
LL | |         if i > n {
LL | |             break 'mylabel;
LL | |         }
LL | |         i += 1;
LL | |     }
   | |_____^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/ctfe-labelled-loop.rs:16:1
   |
LL | const X: u32 = labelled_loop(19);
   | ^^^^^^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

